fixed post wrapping and indexing

--- a/src/DailyBox.css
+++ b/src/DailyBox.css
@@ -25,6 +25,7 @@ img{
     flex:1.0;
     display:flex;
     flex-direction: column;
+    word-break: break-all;
 }
 
 .text{
